tests/invalid/invalid-021.inox
Module Invalid021

Main() :
    MissingFunction(1)
;
